--- a/template.ipynb
+++ b/template.ipynb
@@ -146,7 +146,7 @@
    "id": "eecc3b25-ae80-4e6a-be38-1f3c66a46899",
    "metadata": {},
    "source": [
-    "#### Enter your assets allocation ratios for each type of savings account."
+    "####  <span style='background:yellow'> Enter your assets allocation ratios for each type of savings account."
    ]
   },
   {
@@ -179,9 +179,9 @@
     "These are important components of future assumptions.\n",
     "Setting future rates is done with the `setRates()` method from which one can select different\n",
     "sources for determining the rates.\n",
-    "Valid entries are *historical*, *stochastic*, or a list of fixed average values.\n",
+    "Valid entries are *historical*, *stochastic*, *average*, or a list of fixed average values.\n",
     "\n",
-    "For the *historical* and *stochastic* choices, data from 1928 to the last year are available for experimenting.\n",
+    "For the *historical*, *stochastic*, and *average* choices, data from 1928 to the last year are available for experimenting.\n",
     "Ranges chosen smaller than the life horizon of the longest-lived individual will have rate values repeated in cycle. For example,\n",
     "choosing historical data from 1994 to (up and including) 1996 will repeat these three values over the time span of the realization.\n",
     "This would be called as follows:\n",
@@ -210,8 +210,14 @@
     "    plan.setRates('stochastic', 1940, 1970)\n",
     "\n",
     "would generate random rates consistent to those observed during the 1940 - 1970 time period.\n",
+    "\n",
+    "Rates can also be set to fixed values obtained from an average over a time interval using the *average* option. For example,\n",
+    "\n",
+    "    plan.setRates('average', 1990, 2020)\n",
+    "\n",
+    "would set the rates to fixed values being the average observed from 1990 to 2020 inclusively.\n",
     "    \n",
-    "Finally one can also use fixed annual rates averaged over the whole time interval by providing a list of 4 entries as follows:\n",
+    "Finally one can also use selected fixed annual rates by providing a list of 4 entries as follows:\n",
     "\n",
     "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
     "    plan.setRates(myrates)\n",
@@ -260,7 +266,7 @@
    "id": "e700b3b2-1a9f-4804-b92e-9654f6e7fa51",
    "metadata": {},
    "source": [
-    "#### Enter your savings account balances."
+    "####  <span style='background:yellow'> Enter your savings account balances."
    ]
   },
   {
@@ -380,7 +386,7 @@
    "id": "029acbc5-419a-41b1-89d9-e91e46f04b75",
    "metadata": {},
    "source": [
-    "#### Copy the template.xlsx file provided and edit it with your plan. Enter the name of your own file."
+    "####  <span style='background:yellow'> Copy the template.xlsx file provided and edit it with your plan. Enter the name of your own file."
    ]
   },
   {
@@ -525,7 +531,7 @@
     "    plan.setEstateTaxRate(30)\n",
     "    plan.estate()\n",
     "    \n",
-    "which returns the value of the estate, assuming (in this case) a 30\\% tax burden on the taxable portion of the estate (read tax-deferred savings accounts). The `estate()` function returns two values: the total post-tax value of all savings account in today's dollars and the cumulative inflation rate between today and the last day of the realization. In the example below, we also use utility functions provided by the `arp` module to properly display dollar (`rp.d()`) and percentage (`rp.pc()`) values. We can also override the value provided by giving an argument. In the case below, a value of %35 would override the value shown above."
+    "which returns the value of the estate, assuming (in this case) a 30\\% tax burden on the taxable portion of the estate (read tax-deferred savings accounts). The `estate()` function returns two values: the total post-tax value of all savings account in today's dollars and the cumulative inflation rate between today and the last day of the realization. We can also override the value provided by giving an argument. In the case below, a value of %35 would override the value shown above."
    ]
   },
   {
@@ -535,8 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total, percent = plan.estate(35)\n",
-    "print(rp.d(total), rp.pc(percent))"
+    "plan.estate(35)\n"
    ]
   },
   {
