Added more instructions

--- a/template.ipynb
+++ b/template.ipynb
@@ -480,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.plotNetIncome();"
+    "plan.showNetIncome();"
    ]
   },
   {
@@ -499,7 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.plotSources();"
+    "plan.showSources();"
    ]
   },
   {
@@ -518,7 +518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.plotAccounts();"
+    "plan.showAccounts();"
    ]
   },
   {
@@ -560,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.plotTaxes();"
+    "plan.showTaxes();"
    ]
   },
   {
@@ -583,7 +583,7 @@
    },
    "outputs": [],
    "source": [
-    "plan.plotTaxableIncome();"
+    "plan.showGrossIncome();"
    ]
   },
   {
@@ -604,7 +604,7 @@
    },
    "outputs": [],
    "source": [
-    "plan.plotRates();"
+    "plan.showRates();"
    ]
   },
   {
@@ -671,7 +671,7 @@
     "### Historical comparisons\n",
     "The `runHistorical()` function runs multiple scenarios each going through a historical sequence of rates starting at a given year. It simulates a situation in which this year's rate would be those which happened, say in 1960, and the next in 1961, and so on. The next simulation starts a year later in 1961 and the following years will also be shifted by one year.\n",
     "\n",
-    "User can select what values to plot at the end of each scenario through the `myplots` keyword. It understands the following words: *net income*, *rates*, *taxable income*, *sources*, *taxes*, and *accounts*."
+    "User can select what values to show at the end of each scenario through the `myplots` keyword. It understands the following words: *net income*, *rates*, *taxable income*, *sources*, *taxes*, and *accounts*."
    ]
   },
   {
