Changed name of saving function.

--- a/template.ipynb
+++ b/template.ipynb
@@ -631,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plan.saveRealizationXL('Jack and Jill', True)"
+    "# plan.saveInstance('Jack and Jill', True)"
    ]
   },
   {
@@ -731,6 +731,14 @@
     "\n",
     "Enjoy!\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae012c9b-ab4c-466d-a287-c34546b832f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
