Coded restartable configuration files.

--- a/template.ipynb
+++ b/template.ipynb
@@ -72,13 +72,13 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "# import arp as rp\n",
+    "# import arp\n",
     "\n",
     "import importlib\n",
-    "rp = importlib.import_module('arp')\n",
-    "importlib.reload(rp)\n",
+    "arp = importlib.import_module('arp')\n",
+    "importlib.reload(arp)\n",
     "\n",
-    "rp.setVerbose(True)"
+    "arp.setVerbose(True)"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan = rp.Plan(YOB=[XXXX, XXXX], expectancy=[XX, XX])"
+    "plan = arp.Plan(YOB=[XXXX, XXXX], expectancy=[XX, XX])"
    ]
   },
   {
@@ -690,7 +690,7 @@
    "outputs": [],
    "source": [
     "plan.setDesiredIncome(XXXX, 'smile')\n",
-    "rp.setVerbose(False)\n",
+    "arp.setVerbose(False)\n",
     "plan.runHistorical(1960, 1988, myplots=['rates', 'net income'])"
    ]
   },
