--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -74,13 +74,13 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "# import arp as rp\n",
+    "# import arp\n",
     "\n",
     "import importlib\n",
-    "rp = importlib.import_module('arp')\n",
-    "importlib.reload(rp)\n",
+    "arp = importlib.import_module('arp')\n",
+    "importlib.reload(arp)\n",
     "\n",
-    "rp.setVerbose(True)"
+    "arp.setVerbose(True)"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan = rp.Plan(YOB=[1961, 1964], expectancy=[89, 92])"
+    "plan = arp.Plan(YOB=[1961, 1964], expectancy=[89, 92])"
    ]
   },
   {
@@ -266,7 +266,7 @@
    },
    "outputs": [],
    "source": [
-    "_ = rp.showRateDistributions(1928, 2022)"
+    "_ = arp.showRateDistributions(1928, 2022)"
    ]
   },
   {
@@ -714,7 +714,7 @@
    "outputs": [],
    "source": [
     "plan.setDesiredIncome(84100, 'smile')\n",
-    "rp.setVerbose(False)\n",
+    "arp.setVerbose(False)\n",
     "plan.runHistorical(1960, 1988, myplots=['rates', 'net income'])"
    ]
   },
@@ -751,11 +751,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "242a9272-e47b-4de2-91c1-9c5bc41cf18a",
+   "id": "096a73b4-45ea-40dc-81bb-d60bfb6d55b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan2, conversions = rp.optimizeRoth(plan, 30)\n",
+    "plan2, conversions = arp.optimizeRoth(plan, 30)\n",
     "print(conversions)\n",
     "plan2.run();\n",
     "plan2.saveInstance('plan2', True)"
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15246239-4066-49ad-8d6a-9305c44be44f",
+   "id": "d935f374-ccae-4deb-a1d7-e434cdef3917",
    "metadata": {
     "tags": []
    },
@@ -784,6 +784,26 @@
     "plan2.showSources()\n",
     "plan.showAccounts()\n",
     "plan2.showAccounts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2782b1d8-98ab-4b27-8c09-e52ef2382857",
+   "metadata": {},
+   "source": [
+    "### Saving configuration\n",
+    "Configuration parameters set for a run can be saved in a file, thus avoiding to re-enter the same information in the future. This is done using the `savePlan()` and `readPlan()` function calls. Note that 'readPlan()' returns a newly created plan pre-configured according to the parameters set in the configuration file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a5b735d-e4b8-4487-9e6c-bc0cbe17b805",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arp.savePlan(plan, 'jack+jill')\n",
+    "newplan = arp.readPlan('jack+jill')"
    ]
   },
   {
