--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -16,7 +16,7 @@
    "id": "3fbb38b5",
    "metadata": {},
    "source": [
-    "This package is a retirement modeling framework for exploring the sensitivity of retirement financial decisions. Strictly speaking, it is not a planning tool, but more an environment for exploring *what if* scenarios. It provides different realizations of a financial strategy. One can certainly have a savings plan, but due to the volatility of financial investments, it is impossible to have an exact and certain asset earnings plan. Moreover, it is very likely that tax laws will change in the future. That does not mean one cannot make decisions. This is where this tool fits it. Given your savings and spending desires, it can generate different future realizations of your strategy under different market assumptions, helping to better understand one's financial situation.\n",
+    "This package is a retirement modeling framework for exploring the sensitivity of retirement financial decisions. Strictly speaking, it is not a planning tool, but more an environment for exploring *what if* scenarios. It provides different realizations of a financial strategy. One can certainly have a savings plan, but due to the volatility of financial investments, it is impossible to have an exact and certain asset earnings plan. Moreover, it is extremely likely that tax laws will change in the future. But that does not mean one cannot make decisions. This is where this tool fits it. Given your savings and spending desires, it can generate different future realizations of your strategy under different market assumptions, helping to better understand one's financial situation.\n",
     "\n",
     "Copyright - Martin-D. Lacasse (2023)\n",
     "\n",
@@ -44,7 +44,7 @@
     "\n",
     "I assume that you have some familiarity with using a jupyter notebook or jupyterLab, and some basic programming skills in Python.\n",
     "\n",
-    "For simulating your own realizations, use (and possibly rename) the files beginning with *template*. Rename them keeping the same extension and give them you own names. Then you'll be able to personalize a case with your own numbers and start experimenting with ARP Lab."
+    "For simulating your own realizations, use the files beginning with *template*. Rename them keeping the same extension and give them you own names. Then you'll be able to personalize a case with your own numbers and start experimenting with ARP Lab."
    ]
   },
   {
@@ -138,7 +138,7 @@
     "\n",
     "The total of percentages in each class of assets for each savings account must add to 100%.\n",
     "\n",
-    "You are asked to provide asset ratios for today, and ones for the time at the end of your life.\n",
+    "You are asked to provide asset allocation ratios for today, and ones for the time at the end of your life.\n",
     "Values in between will be interpolated using a linear operator (for now). This can be useful\n",
     "if you want to shift assets allocation as you age.\n"
    ]
@@ -150,7 +150,7 @@
    "source": [
     "In the example below, Jack's and Jill's allocations start in full stock equities in the tax-free account,\n",
     "gradually transitioning to a traditional 60/40 portfolio towards the end of their life. Their tax-deferred\n",
-    "account stays as a traditional 60/40 for the duration of the realization. Note that asset ratios are entered as percentages."
+    "account stays as a traditional 60/40 for the duration of the realization. Note that assets allocation ratios are entered as percentages."
    ]
   },
   {
@@ -183,9 +183,9 @@
     "These are important components of future assumptions.\n",
     "Setting future rates is done with the `setRates()` method from which one can select different\n",
     "sources for determining the rates.\n",
-    "Valid entries are *historical*, *stochastic*, *average*, or a list of fixed average values.\n",
+    "Valid choices are *historical*, *stochastic*, *average*, 'fixed', or 'default'.\n",
     "\n",
-    "For the *historical*, *stochastic*, and *average* choices, data from 1928 to the last year are available for experimenting.\n",
+    "For the *historical*, *stochastic*, and *average* options, data from 1928 to the last year are available for experimenting.\n",
     "Ranges chosen smaller than the life horizon of the longest-lived individual will have rate values repeated in cycle. For example,\n",
     "choosing historical data from 1994 to (up and including) 1996 will repeat these three values over the time span of the realization.\n",
     "This would be called as follows:\n",
@@ -209,7 +209,7 @@
     "\n",
     "    plan.setRates('stochastic', 1945)\n",
     "    \n",
-    "will analyze the annual rates from 1945 up to last-year and compute means and covariance to generate new data that is statistically representative of the ones observed in this data range. The rates randomly generated for the timespan can be plotted and examined as we will see below. Similarly,\n",
+    "will analyze the annual rates from 1945 up to last-year and compute means and covariance to generate new data that are statistically representative of the ones observed during the selected time period. The rates randomly generated for the timespan can be plotted and examined as we will see below. Similarly,\n",
     "\n",
     "    plan.setRates('stochastic', 1940, 1970)\n",
     "\n",
@@ -221,12 +221,12 @@
     "\n",
     "would set the rates to fixed values being the average observed from 1990 to 2020 inclusively.\n",
     "    \n",
-    "Finally one can also use fixed annual rates by providing a list of 4 entries as follows:\n",
+    "Finally one can also use fixed annual rates by providing a list of 4 entries in percent as follows:\n",
     "\n",
     "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
-    "    plan.setRates(myrates)\n",
+    "    plan.setRates('fixed', values=myrates)\n",
     "    \n",
-    "This example would use fixed rates of 9.6%, 4.0%, 3.0%, and 3.8% as average annual returns on S&P500, corporate bonds, Treasury bonds, and common assets, respectively, with an average annual inflation rate of 3.8% for the full duration of the time simulation. Remember that the common assets class consists of investments tracking inflation only. Therefore the last index serves both to track the common asset class and to adjust values for inflation.\n",
+    "This example would use fixed rates of 9.6%, 4.0%, 3.0%, and 3.8% as average annual returns on S&P500, corporate bonds, Treasury bonds, and common assets, respectively, with an average annual inflation rate of 3.8% for the full duration of the time simulation. Recall that the common assets class consists of investments tracking inflation only. Therefore the last index serves both to track the common asset class and to adjust values for inflation.\n",
     "\n",
     "Also note that the S&P500 rates provided always include dividends, which are assumed to be reinvested.\n"
    ]
@@ -254,7 +254,7 @@
    "id": "da5637d2-e6a6-4fd4-ae8d-f5f85a49f862",
    "metadata": {},
    "source": [
-    "Since ARP Lab has all the historical rates available, one can also display their histograms using the following call. Given the standard deviation of each histogram, the risk/benefit between stocks and bonds becomes clear."
+    "Since ARP Lab has the historical rates available, one can also display their histograms using the following function call. Given the standard deviation of each histogram, the risk/benefit between stocks and bonds becomes clear. As this function returns the means and covariance matrix, we assign the result to the `_` variable which, in Python, is used to store results from the last command."
    ]
   },
   {
@@ -347,11 +347,11 @@
     "## What about anticipated fixed income?\n",
     "Pension and social security are fixed income. Model here assumes that pension income is not inflation adjusted while social security benefits are (but ARP Lab can easily be modified to account for inflation-adjusted pensions). Numbers to be provided are the predicted amount for each spouse and the age of the commencement of benefits.\n",
     "\n",
-    "If there are no pension benefits, just use zeros (0) as entries, as in\n",
+    "By default, no pension benefits are assumed. This can also be specified explicitly by entering zeros (0) as entries, as in\n",
     "\n",
     "    plan.setPension([0, 0], [65, 65])\n",
     "    \n",
-    "For social security, one must provide the predicted amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesing calculator can be found at www.opensocialsecurity.com. This last one allows you to compare different strategies through a sensitivity plot.\n"
+    "For social security, one must provide the predicted amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesing calculator can be found at www.opensocialsecurity.com. This calculator allows you to compare different scenarios regarding your commencement age through a sensitivity plot.\n"
    ]
   },
   {
@@ -494,7 +494,7 @@
    "metadata": {},
    "source": [
     "### Show net income compared to target income over the years\n",
-    "This graph shows how the actual net income generated by the plan realization matches the inflation-adjusted net income profile specified. Note the 40% drop in target income as one spouse passes. This drop is configurable through the `setSurvivingFraction()` method. Default value is %60."
+    "This graph shows how the actual net income generated by the plan realization matches the inflation-adjusted net income profile specified. Note the 40% drop in target income as one spouse passes. This drop is configurable through the `setSurvivorFraction()` method. Default value is %60."
    ]
   },
   {
