--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -695,7 +695,7 @@
    "metadata": {},
    "source": [
     "## Can we save this realization?\n",
-    "This instance of a future realization contains information on the distribution amounts, including the required minimum distribution that had to be performed under the given assumptions. This info can be saved in an excel workbook with one spreadsheet (tab) for each spouse. Worksheet will also contain annual rates, income, income taxes, and account balances. Second `True/False` argument controls if existing files get overwritten. Also remember that Windows will not allow the file to be overwriten while the file is being opened in Excel."
+    "This instance of a future realization contains information on the distribution amounts, including the required minimum distribution that had to be performed under the given assumptions. This info can be saved in an excel workbook with one spreadsheet (tab) for each spouse. Worksheet will also contain annual rates, income, income taxes, and account balances. Second `True/False` argument controls if existing files get overwritten. Also remember that Windows will not allow the file to be overwriten while the file is being opened in Excel. In that case, the script will ask you to close the file and will retry to save."
    ]
   },
   {
@@ -703,7 +703,9 @@
    "id": "9231c810-31db-45aa-98f1-6632f717d375",
    "metadata": {},
    "source": [
-    "Here, this call will create an excel workbook with one spreadsheet (tab) for Jack and one for Jill. Open the file in Excel to see what it looks like. "
+    "Here, this call will create an excel workbook with one spreadsheet (tab) for Jack and one for Jill. \n",
+    "\n",
+    "Open the file in Excel to see what it looks like. "
    ]
   },
   {
