--- a/template.ipynb
+++ b/template.ipynb
@@ -122,6 +122,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c740df10-4aff-4c35-822e-4d1e85bbb5aa",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Specify account balances and spousal beneficiaries\n",
+    "For each spouse, savings accounts have three buckets comprising of the total value of:\n",
+    "- Individual taxable investment or savings accounts, including bank accounts, and CDs - do not include your safety net account which should typically be sufficient for sustaining 6 months of living expenses\n",
+    "- Tax-deferred savings accounts, including all IRAs, 401k, 403b, etc.\n",
+    "- Tax-free savings accounts, including Roth IRAs and Roth 401k\n",
+    "\n",
+    "For married couples, each spouse will have to enter values for each type of savings account, following the same order as before. For single individuals, only one value is needed between square brackets `[ ]`.\n",
+    "\n",
+    "Most investment accounts have named beneficiaries. The *beneficiary* values specify the fraction of total of assets left to the other spouse at death. For example, a spouse leaving 3/4 of her fortune to her three children and the other part to her partner would have a beneficiary value of 0.25. While this number is irrelevant for single individuals, it still needs to be entered: just use `[1]`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de0fc285-f789-4989-b22a-1c6fc6a9f7c5",
+   "metadata": {},
+   "source": [
+    "####  <span style='background:yellow'> Enter your savings account balances."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa9b0109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan.setAssetBalances(taxable=[90000, 40000], \n",
+    "                      taxDeferred=[500000, 150000],\n",
+    "                      taxFree=[80000, 25000],\n",
+    "                      beneficiary=[1, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ea1d7ff",
    "metadata": {
     "tags": []
@@ -156,13 +195,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setInitialAR(taxableAR=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
-    "                  taxDeferredAR=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
-    "                  taxFreeAR=[[100, 0, 0, 0], [100, 0, 0, 0]])\n",
+    "plan.setInitialAR(taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
+    "                  taxDeferred=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
+    "                  taxFree=[[100, 0, 0, 0], [100, 0, 0, 0]])\n",
     "\n",
-    "plan.setFinalAR(taxableAR=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
-    "                taxDeferredAR=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
-    "                taxFreeAR=[[60, 40, 0, 0], [60, 40, 0, 0]])\n",
+    "plan.setFinalAR(taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
+    "                taxDeferred=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
+    "                taxFree=[[60, 40, 0, 0], [60, 40, 0, 0]])\n",
     "\n",
     "plan.interpolateAR('linear')"
    ]
@@ -243,43 +282,6 @@
    "outputs": [],
    "source": [
     "plan.setRates('historical', 1969)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ab0c6667",
-   "metadata": {},
-   "source": [
-    "## Specify account balances and spousal beneficiaries\n",
-    "For each spouse, savings accounts have three buckets comprising of the total value of:\n",
-    "- Individual taxable investment or savings accounts, including bank accounts, and CDs - do not include your safety net account which should typically be sufficient for sustaining 6 months of living expenses\n",
-    "- Tax-deferred savings accounts, including all IRAs, 401k, 403b, etc.\n",
-    "- Tax-free savings accounts, including Roth IRAs and Roth 401k\n",
-    "\n",
-    "For married couples, each spouse will have to enter values for each type of savings account, following the same order as before. For single individuals, only one value is needed between square brackets `[ ]`.\n",
-    "\n",
-    "Most investment accounts have named beneficiaries. The *beneficiary* values specify the fraction of total of assets left to the other spouse at death. For example, a spouse leaving 3/4 of her fortune to her three children and the other part to her partner would have a beneficiary value of 0.25. While this number is irrelevant for single individuals, it still needs to be entered: just use `[1]`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e700b3b2-1a9f-4804-b92e-9654f6e7fa51",
-   "metadata": {},
-   "source": [
-    "####  <span style='background:yellow'> Enter your savings account balances."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa9b0109",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plan.setAssetBalances(taxable=[90000, 40000], \n",
-    "                      taxDeferred=[500000, 150000],\n",
-    "                      taxFree=[80000, 25000],\n",
-    "                      beneficiary=[1, 1])"
    ]
   },
   {
@@ -524,14 +526,16 @@
   {
    "cell_type": "markdown",
    "id": "8ae26e4d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "To get more information about accounts at the last year of the realization, one can use\n",
     "\n",
-    "    plan.setEstateTaxRate(30)\n",
+    "    plan.setDeferredTaxRate(30)\n",
     "    plan.estate()\n",
     "    \n",
-    "which returns the value of the estate, assuming (in this case) a 30\\% tax burden on the taxable portion of the estate (read tax-deferred savings accounts). The `estate()` function returns two values: the total post-tax value of all savings account in today's dollars and the cumulative inflation rate between today and the last day of the realization. We can also override the value provided by giving an argument. In the case below, a value of %35 would override the value shown above."
+    "which returns the value of the assets at the last year of the scenario, assuming (in this case) a 30\\% tax burden on the taxable portion of the estate (read tax-deferred savings accounts). The `estate()` function returns two values: the total post-tax value of all savings account in today's dollars and the cumulative inflation rate between today and the last day of the realization. We can also override the value provided by giving an argument. In the case below, a value of %35 would override the value shown above."
    ]
   },
   {
@@ -542,6 +546,25 @@
    "outputs": [],
    "source": [
     "plan.estate(35)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d65de61-376f-4b8e-a944-706a05b399a2",
+   "metadata": {},
+   "source": [
+    "### Show assets allocations during the time period\n",
+    "The allocation of assets is shown for the three types of savings accounts (taxable, tax-deferred, and tax-free) for each spouse and for the 4 types of investments: stocks (S&P 500), corporate bonds (Baa), Treasury bonds (10-y), and common assets tracking inflation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1f2ca26-2d1c-483d-be98-8c83b726a60f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan.showAssetsAllocations()"
    ]
   },
   {
