--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -16,7 +16,7 @@
    "id": "3fbb38b5",
    "metadata": {},
    "source": [
-    "This package is a retirement modeling framework for exploring the sensitivity of retirement financial decisions. Strictly speaking, it is not a planning tool, but more an environment for exploring *what if* scenarios. It provides different realizations of a financial strategy. One can certainly have a savings plan, but due to the volatility of financial investments, it is impossible to have an exact and certain asset earnings plan. Moreover, it is extremely likely that tax laws will change in the future. But that does not mean one cannot make decisions. This is where this tool fits it. Given your savings and spending desires, it can generate different future realizations of your strategy under different market assumptions, helping to better understand one's financial situation.\n",
+    "This package is a retirement modeling framework for exploring the sensitivity of retirement financial decisions. Strictly speaking, it is not a planning tool, but more an environment for exploring *what if* scenarios. It provides different realizations of a financial strategy. One can certainly have a savings plan, but due to the volatility of financial investments, it is impossible to have a certain asset earnings plan. This does not mean one cannot make decisions. These decisions need to be guided with an understanding of the sensitivity of the parameters.This is exactly where this tool fits it. Given your savings and spending desires, it can generate different future realizations of your strategy under different market assumptions, helping to better understand your financial situation.\n",
     "\n",
     "Copyright - Martin-D. Lacasse (2023)\n",
     "\n",
@@ -30,7 +30,7 @@
    "source": [
     "### <span style=\"color: blue\"> README FIRST </span>\n",
     "<span style=\"color:black;background:yellow;font-weight:bold\">\n",
-    "Don't make changes directly to this file. Keep it as a working example. Therefore, it is strongly recommended that you build your own case using the template files provided where you will be able to enter your own numbers and explore your own assumptions.\n",
+    "Don't make changes directly to this file. Keep it as a working example. Therefore, it is recommended that you build your own case using the template files provided where you will be able to enter your own numbers and explore your own assumptions.\n",
     "</span>"
    ]
   },
@@ -42,7 +42,7 @@
     "## Introduction\n",
     "This file is provided as an example to introduce you to ARP Lab.\n",
     "\n",
-    "I assume that you have some familiarity with using a jupyter notebook or jupyterLab, and some basic programming skills in Python.\n",
+    "It is assumed that you have some familiarity with using a jupyter notebook or jupyterLab, and some basic programming skills in Python. If not, a simple tutorial can guide you to the basic skills needed.\n",
     "\n",
     "For simulating your own realizations, use the files beginning with *template*. Rename them keeping the same extension and give them you own names. Then you'll be able to personalize a case with your own numbers and start experimenting with ARP Lab."
    ]
@@ -63,7 +63,7 @@
    },
    "source": [
     "### Just some Python module bookkeeping\n",
-    "The following commands load the required module and set the program to display informational messages as it runs. It also makes sure that all graphs are properly displayed within the jupyter interface."
+    "The following commands are bookkeeping calls that load the required module and set the program to display verbose informational messages as it runs. It also makes sure that all graphs are properly displayed within the jupyter interface. These commands need to be there on any ARP Lab notebook."
    ]
   },
   {
@@ -129,9 +129,9 @@
    "source": [
     "## Specify account balances and spousal beneficiaries\n",
     "For each spouse, savings accounts have three buckets comprising of the total value of:\n",
-    "- Individual **taxable** investment or savings accounts, including bank accounts, and CDs - do not include your safety net account which should typically be sufficient for sustaining 6 months of living expenses\n",
-    "- **Tax-deferred** savings accounts, including all IRAs, 401k, 403b, etc.\n",
-    "- **Tax-free** savings accounts, including Roth IRAs and Roth 401k\n",
+    "- Individual **taxable** investment or savings accounts, including bank accounts, and CDs - do not include your safety net account which should typically be sufficient for sustaining 6 months of living expenses;\n",
+    "- **Tax-deferred** savings accounts, including all IRAs, 401k, 403b, etc.;\n",
+    "- **Tax-free** savings accounts, including Roth IRAs and Roth 401k.\n",
     "\n",
     "For married couples, each spouse will have to enter values for each type of savings account, following the same order as before. For single individuals, only one value is needed between square brackets `[ ]`.\n",
     "\n",
@@ -143,7 +143,7 @@
    "id": "6ea4c5dc-f88d-47c5-a1ec-3474d023bf23",
    "metadata": {},
    "source": [
-    "Jack and Jill leave everything to each other as account beneficiaries as entered by [1, 1]. Jack has \\\\$90k in his taxable account, \\\\$500k in his 401k, and $80 in his Roth 401k and Roth IRAs. Jill has \\\\$40k in her savings bank account, \\\\$150k in a 403b, and \\\\$25k in Roth IRAs in which she contributed over the years."
+    "Jack and Jill leave everything to each other as savings account beneficiaries as entered by [1, 1]. Jack has \\\\$90k in his taxable account, \\\\$500k in his 401k, and $80k in his Roth 401k and Roth IRAs. Jill has \\\\$40k in her savings bank account, \\\\$150k in a 403b, and \\\\$25k in Roth IRAs in which she contributed over the years."
    ]
   },
   {
@@ -166,7 +166,7 @@
     "tags": []
    },
    "source": [
-    "## What are current and future assets allocations?\n",
+    "## What are the current and future assets allocations?\n",
     "Each savings account can invest in 4 major classes of assets:\n",
     "- Equity funds tracking the S&P 500 index;\n",
     "- Bond assets tracking the Corporate bonds (Baa) index;\n",
@@ -175,7 +175,7 @@
     "\n",
     "The total of percentages in each class of assets for each savings account must add to 100%.\n",
     "\n",
-    "You are asked to provide asset allocation ratios for today, and ones for the time at the end of your life.\n",
+    "You are asked to provide assets allocation ratios for today, and ones for the time at the end of your life.\n",
     "Values in between will be interpolated using a linear operator (for now). This can be useful\n",
     "if you want to shift assets allocation as you age.\n"
    ]
@@ -185,9 +185,9 @@
    "id": "eecc3b25-ae80-4e6a-be38-1f3c66a46899",
    "metadata": {},
    "source": [
-    "In the example below, Jack's and Jill's allocations start in full stock equities in the tax-free account,\n",
+    "In the example below, Jack's and Jill's assets allocations start in full stock equities in the tax-free account,\n",
     "gradually transitioning to a traditional 60/40 portfolio towards the end of their life. Their tax-deferred\n",
-    "account stays as a traditional 60/40 for the duration of the realization. Note that assets allocation ratios are entered as percentages, and that these percentages are for each type of savings account, and for each spouse."
+    "account stays as a traditional 60/40 for the duration of the realization. Note that assets allocation ratios are entered as percentages, and that these percentages are for each type of savings account, and for each spouse. This strategy does not account for the balances in each account, but ARP Lab can deal this complexity as we will see in the advanced allocation strategies."
    ]
   },
   {
@@ -213,19 +213,19 @@
    "id": "aab98b75-9503-4f99-9eed-14e9a17d8ffe",
    "metadata": {},
    "source": [
-    "#### Advanced assets allocation\n",
-    "When savings account balances differ significantly between accounts, it might be beneficial to push one type of asset into a specific account. For example, stocks are more likely to grow in the long-term and are better suited for tax-free accounts, while secure and less performant assets are better held in taxable accounts. In some other cases, it might be even more beneficial to coordinate both spousal accounts in order to optimize assets allocations. This is the case for example if only one spouse has a tax-free account. For these situations, we can instruct ARP Lab to coordinate assets allocations between spousal accounts. This is done using the `setCoordinateAR()` function call. There are two choices: one can provide a list of double entries, in which case the allocations for each spouse will be done separately. Here is one example:\n",
+    "#### Advanced assets allocation strategies\n",
+    "When savings account balances differ significantly between accounts, it might be beneficial to push one type of asset into a specific account. For example, stocks are more likely to grow in the long-term and therefore are better suited for tax-free accounts, while secure and less-performant assets are better held in taxable accounts where growth would be taxed. In some other cases, it might be even more beneficial to coordinate both spousal accounts in order to optimize assets allocations. This is the case for example if only one spouse has a tax-free account. For these situations, we can instruct ARP Lab to coordinate assets allocations between spousal accounts. This is done using the `setCoordinateAR()` function call. There are two choices: one can provide a list of double entries, in which case the assets allocations for each spouse will be done separately. Here is one example:\n",
     "\n",
     "    plan.setCoordinatedAR(initial=[[60, 30, 5, 5], [60, 30, 5, 5]], final=[[50, 30, 5, 15], [50, 30, 5, 15]])\n",
     "    \n",
-    "where each spouse might choose to take different allocation ratios. In this case, asset allocation will be coordinated between accounts belonging to the same individual.\n",
-    "This is in contrast with the next example, where accounts of both spouses will be optimized together. This is done by providing a single set of ratios for each bound (*initial* and *final*).\n",
+    "where each spouse might choose to take different allocation ratios. In this case, assets allocations will be coordinated between accounts belonging to the same individual.\n",
+    "This is in contrast with the next example, where accounts of both spouses will be optimized together. This is done by providing a single set of ratios for each bound (*initial* and *final*):\n",
     "\n",
     "    plan.setCoordinatedAR(initial=[60, 30, 5, 5], final=[50, 30, 5, 15])\n",
     "    \n",
-    "With these options, ARP will try to pack as much stocks into the tax-free accounts, then into the tax-deferred accounts, then into the taxable accounts. For common assets, the reverse order is used and ARP will attempt packing as much common assets in the taxable accounts, then the tax-deferred, etc. In these cases, the allocation ratios depend on the balance in each of the accounts, but the overall ratios of all savings accounts under consideration will be matching to one prescribed by the `setCoordinatedAR()` function. As the accounts balances will be evolving from one year to the other, so will the calculated ratios. At the end of a scenario, the calculated ratios can be saved in an Excel spreadsheet by using the `saveInstance()` function that will be introduced below.\n",
+    "With these options, ARP Lab will try to pack as much stocks into the tax-free accounts, then into the tax-deferred accounts, then into the taxable accounts. For common assets, the reverse order is used and ARP Lab will attempt packing as much common assets in the taxable accounts, then the tax-deferred, etc. In these cases, the allocation ratios depend on the balance in each of the accounts, but the overall ratios of all savings accounts under consideration will be matching to one prescribed by the `setCoordinatedAR()` function. As the account balances will be evolving from one year to the other, so will the calculated ratios. At the end of a scenario, the calculated ratios can be saved in an Excel spreadsheet by using the `saveInstance()` function that will be introduced below.\n",
     "\n",
-    "As for the non-coordinated case, a call to `setCoordinatedAR()` must be followed by an interpolation as before. Examples of such commands are in the next cell, and were commented out.\n",
+    "As for the non-coordinated case, a call to `setCoordinatedAR()` must be followed by an interpolation as before. Examples of such commands are in the next cell, and were commented out. Just delete the `#` before the commands to enable the statements.\n",
     "    "
    ]
   },
@@ -255,9 +255,9 @@
    "source": [
     "## Specify rates of return and inflation rate\n",
     "Rates of return for each class of assets can be specified, including the rate of inflation.\n",
-    "These are important components of future assumptions.\n",
+    "These are important components for  future assumptions.\n",
     "Setting future rates is done with the `setRates()` method from which one can select different\n",
-    "sources for determining the rates.\n",
+    "sources for determining the ratesfor.\n",
     "Valid choices are *historical*, *stochastic*, *average*, 'fixed', or 'default'.\n",
     "\n",
     "For the *historical*, *stochastic*, and *average* options, data from 1928 to the last year are available for experimenting.\n",
